# Cpp-Algorithms

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bash
src/: CMakeLists.txt
src/Backtracking/SudokuSolver/: CMakeLists.txt
src/Backtracking/SudokuSolver/src/: SudokuSolver.cpp  main.cpp
src/DoubleLinkedList/: CMakeLists.txt
src/DoubleLinkedList/include/DoubleLinkedList/: List.h  Node.h
src/DoubleLinkedList/src/: List.cpp  Node.cpp
src/Graph/: CMakeLists.txt
src/Graph/graphs/: Fluss2.txt  G_100_200.txt  G_10_20.txt  G_10_200.txt  G_1_2.txt  G_1_20.txt  G_1_200.txt  Kostenminimal1.dot  Kostenminimal2.dot  Kostenminimal3.txt  Kostenminimal_gross3.txt  Matching_100_100.txt
src/Graph/include/Graph/: Edge.h  Graph.h  Node.h  algorithm.h  edge.h  flowedge.h  graph.h  node.h
src/Graph/src/: Edge.cpp  Graph.cpp  Node.cpp  algorithm.cpp  edge.cpp  flowedge.cpp  graph.cpp  main.cpp  node.cpp
src/Lists/: CMakeLists.txt
src/Lists/DoubleLinkedList/include/DoubleLinkedList/: List.h  Node.h
src/Lists/DoubleLinkedList/src/: List.cpp  Node.cpp  main.cpp
src/Sorting/: CMakeLists.txt
src/Sorting/AbstractSort/: CMakeLists.txt
src/Sorting/AbstractSort/include/AbstractSort/: AbstractSort.h
src/Sorting/AbstractSort/src/: AbstractSort.cpp
src/Sorting/BubbleSort/: CMakeLists.txt
src/Sorting/BubbleSort/include/BubbleSort/: BubbleSort.h
src/Sorting/BubbleSort/src/: BubbleSort.cpp  main.cpp
src/Sorting/InsertionSort/: CMakeLists.txt
src/Sorting/InsertionSort/include/InsertionSort/: InsertionSort.h
src/Sorting/InsertionSort/src/: InsertionSort.cpp  main.cpp
src/Sorting/MergeSort/: CMakeLists.txt
src/Sorting/MergeSort/include/MergeSort/: MergeSort.h
src/Sorting/MergeSort/src/: MergeSort.cpp  main.cpp
src/Sorting/PerformanceAnalysis/: CMakeLists.txt
src/Sorting/PerformanceAnalysis/files/: numbers10.csv  numbers100.csv  numbers1000.csv  numbers10000.csv  numbers100000.csv
src/Sorting/PerformanceAnalysis/src/: main.cpp
src/Sorting/QuickSort/: CMakeLists.txt
src/Sorting/QuickSort/include/QuickSort/: QuickSort.h
src/Sorting/QuickSort/src/: QuickSort.cpp  main.cpp
src/SudokuSolver/include/SudokuSolver/: SudokuSolver.h
src/SudokuSolver/src/: SudokuSolver.cpp  main.cpp
tests/: CMakeLists.txt
tests/Backtracking/SudokuSolver/: CMakeLists.txt
tests/DoubleLinkedList/: CMakeLists.txt  testDoubleLinkedList.cpp
tests/Graph/: CMakeLists.txt  testGraph.cpp
tests/Lists/: CMakeLists.txt
tests/Lists/DoubleLinkedList/: testDoubleLinkedList.cpp
tests/Sorting/: CMakeLists.txt  testSorting.cpp
tests/Sorting/AbstractSort/: CMakeLists.txt  testAbstractSort.cpp
tests/Sorting/BubbleSort/: CMakeLists.txt  testBubbleSort.cpp
tests/Sorting/QuickSort/: CMakeLists.txt  testQuickSort.cpp
tests/SudokuSolver/: testSudokusolver.cpp
